--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/db/Lord_Ganesha_art.jpg/800px-Lord_Ganesha_art.jpg" alt="Lord Ganesha">
+        <img src="ganesh.jpg" alt="Lord Ganesha">
         <div class="title">Gruhapravesam Invitation</div>
         <div class="subtitle">With the divine blessings of Lord Ganesha,</div>
         <div class="subtitle">We, <strong>Srirangam Family</strong>, cordially invite you to our</div>
@@ -62,7 +62,7 @@
         <div class="subtitle"><strong>Venue:</strong><br>522/I Ushkebhavi, Vandanapuri Colony, Beeramguda</div>
         <div class="subtitle">Followed by Vratam and Lunch</div>
         <a class="map-link" href="https://maps.app.goo.gl/6YMZQadNt1JA9DgS9?g_st=iw" target="_blank">View Location on Google Maps</a>
-        <img src="https://i.imgur.com/xhDpzOZ.png" alt="Our New Home">
+        <img src="IMG-20250402-WA0011.jpg" alt="Our New Home">
         <div class="telugu">
             శుభ ముహూర్తంలో మీరు మా ఇంటి ప్రవేశానికి హాజరై, మీ ఆశీస్సులు ప్రసాదించండి.
         </div>
